Fixing issue where page jumps after voting

--- a/src/styles/Carousel.scss
+++ b/src/styles/Carousel.scss
@@ -23,6 +23,10 @@
         right: 0;
         background: linear-gradient(to left, rgba($color-darkest-gray, 1) 0%,rgba(0,0,0,0) 100%);
     }
+
+    &:focus {
+        outline: none;
+    }
     
     .CarouselSlider {
         transition: $transition;
